feat(templates/collections.html): add base collection card structure to collections.html

--- a/templates/collections.html
+++ b/templates/collections.html
@@ -5,10 +5,46 @@
     
     <p>Collections goes here</p>
 
+    
+
+    <div class="col-md-3 margin-auto">
+        <div class="card rounded-top-5">
+            <div class="h-25 w-100">
+            <img src="https://i.pinimg.com/564x/d1/a5/cc/d1a5cc99e240591db113023438329fce.jpg" class="rounded-top-5 w-100 h-100" alt="...">
+            </div>
+            <div class="card-body">
+                <h2 class="card-title w-100">Ofertas</h2>
+                <div class="container">
+                    <div class="d-flex">
+                        <div class="flex-fill p-2">
+                            <p class="card-text">Recibe notificaciones sobre las mejores ofertas exclusivas con IguanaPay</p>
+                        </div>
+                        <div class="flex-fill p-2">
+                            <!-- Contenido de la segunda columna -->
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Libros:</li>
+                                <li class="list-group-item">- Libro 1</li>
+                                <li class="list-group-item">- Libro 2</li>
+                                <!-- Puedes agregar más libros aquí -->
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="categories">
+                    <p class="card-text">Recibe notificaciones sobre las mejores ofertas exclusivas con IguanaPay</p>
+                </div>
+                    
+            </div>
+        </div>
+    </div>
 
 
 
 
+
+    </div>
+</div>
 
 {% endblock %}
 ```
