--- a/templates/collections.html
+++ b/templates/collections.html
@@ -1,50 +1,55 @@
 <!--#show collections block-->
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Collections</h1>
-    
-    <p>Collections goes here</p>
-
     
 
+    <div class="container">
+        <h1>Colecciones</h1>
+        <div class="row">
+    
+    {% for collection in collections %}
     <div class="col-md-3 margin-auto">
-        <div class="card rounded-top-5">
-            <div class="h-25 w-100">
-            <img src="https://i.pinimg.com/564x/d1/a5/cc/d1a5cc99e240591db113023438329fce.jpg" class="rounded-top-5 w-100 h-100" alt="...">
+        <div class="card h-100 rounded-top-5">
+            <div class="h-50 w-100">
+            <img src="{{ collection.cover }}" class="rounded-top-5 w-100 h-100" alt="...">
             </div>
-            <div class="card-body">
-                <h2 class="card-title w-100">Ofertas</h2>
-                <div class="container">
+            <div class="card-body h-50">
+                <h2 class="card-title h-25 w-100">{{ collection.name }}</h2>
+                <div class="container h-50">
                     <div class="d-flex">
                         <div class="flex-fill p-2">
-                            <p class="card-text">Recibe notificaciones sobre las mejores ofertas exclusivas con IguanaPay</p>
+                            <p class="card-text">{{ collection.description }}</p>
                         </div>
                         <div class="flex-fill p-2">
                             <!-- Contenido de la segunda columna -->
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Libros:</li>
-                                <li class="list-group-item">- Libro 1</li>
-                                <li class="list-group-item">- Libro 2</li>
+                                {% for book in collection.books %}
+                                <li class="list-group-item">{{ book.title }} - {{ book.author }}</li>
+                                {% endfor %}
                                 <!-- Puedes agregar más libros aquí -->
                             </ul>
                         </div>
                     </div>
 
                 </div>
-                <div class="categories">
-                    <p class="card-text">Recibe notificaciones sobre las mejores ofertas exclusivas con IguanaPay</p>
+                <div class="categories h-25">
+                    <ul>
+                        {% for category in collection.categories %}
+                            <li class="float-start badge rounded-pill bg-dark m-1">{{ category }}</li>
+                        {% endfor %}
+                    </ul>
                 </div>
                     
             </div>
         </div>
     </div>
+    {% endfor %}
 
 
-
-
-
+    
+    
     </div>
-</div>
+    </div>
 
 {% endblock %}
 ```
