--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,22 @@
         rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
         crossorigin="anonymous">
-    <title>Django Cards</title>
+    <title>Online Library</title>
 </head>
 <body>
 
-    <h1>Maqueta de Collections</h1>
+    <h1>Maqueta de Colecciones</h1>
 
     <!--Block of content -->
     {% block content %}
     {% endblock %}
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
