--- a/templates/social/feed.html
+++ b/templates/social/feed.html
@@ -1,3 +1,5 @@
+{% load filters %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,11 +7,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
 
+<body>
 <div class="container align-items-center d-flex justify-content-center">
 
     <div class="w-75 box shadow-sm rounded bg-white mb-3">
@@ -20,47 +23,55 @@
         <div class="box-body p-0">
 
 
-            <div class=" p-3 d-flex align-items-center border-bottom osahan-post-header">
+            {% for activity in user_profile.feed.all %}
+                <div class=" p-3 d-flex align-items-center border-bottom osahan-post-header">
 
-                <div class="col-2 dropdown-list-image mr-3 d-flex align-items-center  justify-content-center">
-                    <img class="rounded-circle w-50" src="https://picsum.photos/id/1025/400/400" alt=""/>
+                    <div class="col-2 dropdown-list-image mr-3 d-flex align-items-center  justify-content-center">
+                        {% if activity|is_collection_activity %}
+                            <img class="rounded-circle w-50" src="https://api.dicebear.com/7.x/shapes/svg?seed={{ activity.collection.name }}" alt=""/>
 
-                </div>
-
-                <div class="col-9 font-weight-bold mr-3">
-                    <div class="text-truncate fw-bold">Nombre de usuario o coleccion</div>
-                    <div class="small"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nihil
-                        voluptatem maiores, ipsam repudiandae quod excepturi quia laudantium aut itaque amet cumque sed.
-                        Porro, quia repellat molestiae labore cum eum.
+                        {% elif activity|is_user_activity %}
+                            <img class="rounded-circle w-50"
+                                 src="https://api.dicebear.com/7.x/open-peeps/svg?seed={{ activity.responsible.username }} {{ activity.responsible.first_name }} {{ activity.responsible.last_name }}"
+                                 alt=""/>
+                        {% endif %}
                     </div>
-                </div>
 
-                <span class="col-1 ml-auto mb-auto">
-                        <div class="text-right text-muted pt-1">3d</div>
-                    </span>
-            </div>
+                    <div class="col-9 font-weight-bold mr-3">
 
-            <div class=" p-3 d-flex align-items-center border-bottom osahan-post-header">
+                        {% if activity|is_collection_activity %}
+                            <div class="text-truncate fw-bold">
+                                <i class="fa-solid fa-book"></i>
+                                {{ activity.collection.name }}
+                            </div>
+                            <div class="small">
+                                Agregó un documento a la colección: {{ activity.document.title }}
+                            </div>
+                        {% elif activity|is_user_activity %}
+                            <div class="text-truncate fw-bold">
+                                <i class="fa-solid fa-user"></i>
+                                {{ activity.responsible.first_name }} {{ activity.responsible.last_name }}
+                            </div>
+                            <div class="small">
+                                Creó la colección: {{ activity.collection.name }}
+                            </div>
+                        {% endif %}
 
-                <div class="col-2 dropdown-list-image mr-3 d-flex align-items-center  justify-content-center">
-                    <img class="rounded-circle w-50" src="https://picsum.photos/id/237/400/400" alt=""/>
-
-                </div>
-
-                <div class="col-9 font-weight-bold mr-3">
-                    <div class="text-truncate fw-bold">Nombre de usuario o coleccion</div>
-                    <div class="small"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nihil
-                        voluptatem maiores, ipsam repudiandae quod excepturi quia laudantium aut itaque amet cumque sed.
-                        Porro, quia repellat molestiae labore cum eum.
                     </div>
+
+                    <span class="col-1 ml-auto mb-auto">
+                        <div class="text-right text-muted pt-1">
+                            {{ activity.date }}
+                        </div>
+                    </span>
+
                 </div>
 
-                <span class="col-1 ml-auto mb-auto">
-                        <div class="text-right text-muted pt-1">3d</div>
-                    </span>
-            </div>
+            {% endfor %}
+
         </div>
     </div>
+</div>
 </div>
 </body>
 
@@ -73,5 +84,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/9c5bf940c8.js" crossorigin="anonymous"></script>
 
 </html>
