--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -9,7 +9,6 @@
     <style>
         * {
             box-sizing: border-box;
-
         }
 
         .nav-tabs .nav-item .nav-active {
@@ -33,6 +32,7 @@
 
 {% load static %}
 
+{% block content %}
 <body>
 <div class="container-fluid">
     <div class="row">
@@ -57,10 +57,7 @@
 
             <div class="border border-2 border-primary d-flex justify-content-center align-items-center bg-light">
                 <div id="pdfViewer">
-                    <div id="hideButton">
-                        <button class="btn btn-primary mx-auto d-block fw-bold py-0 my-1" id="loadPDF">Cargar PDF
-                        </button>
-                    </div>
+
                     <!-- Aquí va el PDF -->
                 </div>
             </div>
@@ -71,8 +68,8 @@
             <div class="row">
                 <ul class="nav nav-tabs nav-justified px-0 ">
                     <li class="nav-item">
-                        <a class="nav-link nav-active text-light fw-bold bg-primary py-0" aria-current="page" href="#">Mis
-                            anotaciones</a>
+                        <a class="nav-link nav-active text-light fw-bold bg-primary py-0" aria-current="page" href="#">
+                            Mis anotaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark fw-bold py-0" href="#">Otras anotaciones</a>
@@ -81,78 +78,38 @@
             </div>
 
             <!--NUEVA ANOTACION-->
+
             <div class="row border border-primary border-2 ">
                 <div class="mb-1 px-2 pt-2">
                     <label for="anotation" class="form-label">Nueva anotación</label>
-                    <textarea class="form-control" id="anotation" rows="3"></textarea>
+                    <form method="post" >
+                        {% csrf_token %}
+                        <textarea class="form-control" id="anotation" rows="3"></textarea>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
+                        <button class="btn btn-primary fw-bold py-0" type="submit">Guardar</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
-                    <button class="btn btn-primary fw-bold py-0" type="button">Guardar</button>
-                </div>
+
             </div>
 
             <!--anotaciones-->
-            <div class="row scroll-container  px-2 pt-2 border border-right-0 border-top-0 border-left-0 border-primary border-2 ">
+            <div class="row scroll-container  px-2 pt-2 border border-right-0 border-top-0 border-left-0 border-primary border-2">
 
-                <div class="card mb-2 px-0">
+                <div class="card mb-2 px-0 ">
+                    {% for note in notes %}
                     <div class="card-header d-flex justify-content-between align-items-center px-2 py-0 ">
-                        <div>04/04/2023</div>
+                        <div>{{note.date}}</div>
                         <button type="button" class="btn btn-sm py-0">
                             <i class="favorite fa-regular fa-heart" style="color: #000000;"></i>
                         </button>
                     </div>
                     <div class="card-body text-dark p-2">
-                        <p class="card-text">Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Etiam cursus
-                            interdum ligula, id consequat metus vestibulum at.
-                            Sed erat mauris.</p>
+                        <p class="card-text">{{note.content}}</p>
                     </div>
+                    {% endfor %}
                 </div>
 
-                <div class="card mb-2 px-0">
-                    <div class="card-header d-flex justify-content-between align-items-center px-2 py-0">
-                        <div>04/04/2023</div>
-                        <button type="button" class="btn btn-sm py-0">
-                            <i class="favorite fa-regular fa-heart" style="color: #000000;"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-dark p-2">
-                        <p class="card-text">Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Etiam cursus
-                            interdum ligula, id consequat metus vestibulum at.
-                            Sed erat mauris.</p>
-                    </div>
-                </div>
-
-                <div class="card mb-2 px-0">
-                    <div class="card-header d-flex justify-content-between align-items-center px-2 py-0">
-                        <div>04/04/2023</div>
-                        <button type="button" class="btn btn-sm py-0">
-                            <i class="favorite fa-regular fa-heart" style="color: #000000;"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-dark p-2">
-                        <p class="card-text">Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Etiam cursus
-                            interdum ligula, id consequat metus vestibulum at.
-                            Sed erat mauris.</p>
-                    </div>
-                </div>
-
-                <div class="card mb-2 px-0">
-                    <div class="card-header d-flex justify-content-between align-items-center px-2 py-0">
-                        <div>04/04/2023</div>
-                        <button type="button" class="btn btn-sm py-0">
-                            <i class="favorite fa-regular fa-heart" style="color: #000000;"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-dark p-2">
-                        <p class="card-text">Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Etiam cursus
-                            interdum ligula, id consequat metus vestibulum at.
-                            Sed erat mauris.</p>
-                    </div>
-                </div>
             </div>
             <!--fin-anotaciones-->
 
@@ -163,16 +120,13 @@
 
 
 </body>
+{% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
 <script src="../../static/app.js"></script>
 
 <script>
-    const ocultarBoton = document.getElementById("hideButton")
-    ocultarBoton.addEventListener("click", function () {
-        ocultarBoton.style.display = "none";
-    })
 
     const botones = document.querySelectorAll(".favorite");
 
@@ -193,7 +147,6 @@
             }
         });
     });
-
 
 </script>
 
