--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,21 @@
 </head>
 <body>
 
-    <h1>NAV</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary ">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light fw-bold" href="#">BIBLIOTECA ONLINE</a>
+            <div class="navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav text-light justify-content-between">
+                    <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    <a class="nav-link text-light" href="#">Seguidos</a>
+                    <a class="nav-link text-light" href="#">Recomendaciones</a>
+                    <a class="nav-link text-light" href="#">Publicar</a>
+                    <a class="nav-link text-light" href="#">Feed</a>
+                    <a class="nav-link text-light" href="#">Perfil</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!--Block of content -->
     {% block content %}
