--- a/templates/recommendation/recommended.html
+++ b/templates/recommendation/recommended.html
@@ -2,22 +2,24 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <div class="container">
-        <h1>Recomendaciones:</h1>
+    <div class="container mt-4">
+        <h2>RECOMENDACIONES</h2>
         <h5>Aquí tienes algunas recomendaciones basadas en tus gustos:</h5>
     <!-- Recommendations for category-->
     {% for recommendation in recommendations %}
-    <div class="row">
-        <h4>{{ recommendation.category }}</h4>
+    <div class="row mt-3 mb-3">
+        <h4 class="text-primary">{{ recommendation.category }}:</h4>
         <!-- Books recommended for category-->
         {% for book in recommendation.books %}
         <div class="col-md-3">
-            <div class="card">
+            <a style="text-decoration: none; color: black" href="book/{{ book.document_id }}">
+                <div class="card">
                 <div class="card-body">
                     <h5 class="card-title text-center">{{ book.title }}</h5>
                     <p class="card-text">Autor: {{ book.author }}</p>
                 </div>
             </div>
+            </a>
         </div>
         {% endfor %}
     </div>
