--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -27,7 +27,6 @@
         }
 
     </style>
-+
     <title>{{ document.title }}</title>
 </head>
 
@@ -58,13 +57,7 @@
 
             <div class="border border-2 border-primary d-flex justify-content-center align-items-center bg-light">
                 <div id="pdfViewer">
-                    <div id="hideButton">
-                        <button
-                                class="btn btn-primary mx-auto d-block fw-bold py-0 my-1"
-                                id="loadPDF"
-                                onclick="setPdfUrl('{{ document.url }}')">Obtener Pdf
-                        </button>
-                    </div>
+
                     <!-- Aquí va el PDF -->
                 </div>
             </div>
@@ -131,8 +124,9 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
-<script src="/static/app.js">
-
+<script src="/static/app.js"></script>
+<script>
+    const pdfUrl = "{{ document.url }}";
 </script>
 
 <script>
@@ -143,7 +137,6 @@
         boton.addEventListener("click", function () {
             // Verifica la clase actual del botón
             if (boton.classList.contains("fa-regular")) {
-                // Si tiene la clase original, quítala y agrega la nueva clase
                 boton.classList.remove("fa-regular");
                 boton.style.color = "red"
                 boton.classList.add("fa-solid");
