--- a/templates/social/subirArticulo.html
+++ b/templates/social/subirArticulo.html
@@ -103,17 +103,17 @@
     </style>
 </head>
 <body>
-<div class="container">
+<form action="" method="post" enctype="multipart/form-data"  class="container">
     <!-- Contenedor superior -->
     <div class="top-container">
         <!-- Imagen -->
         <img class="image img-fluid" src="https://th.bing.com/th/id/R.50ce2cd13ed2e7a732c57abe7ab19cf0?rik=7SUFzI9KU6IMOQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f-ll15GKfuAfU%2fUD_QRuRT3SI%2fAAAAAAAAi-w%2f_VQ08qSDwAE%2fs1600%2fLibros-Viejos-Apilados_Imagenes-de-Libros.jpg&ehk=ITajz1yk%2bQeZz6zZHmcxf5Xbt89WsaenbI3pTQzlkcw%3d&risl=&pid=ImgRaw&r=0" alt="Imagen del libro">
         <!-- Campos de entrada -->
         <div class="input-container">
-            <input class="input-field form-control" type="text" placeholder="Título">
+            <input class="input-field form-control" type="text" placeholder="Título" name="title">
 
             <!-- Campo de selección de materia/temática -->
-            <select class="input-field form-control" name="materia_tematica">
+            <select class="input-field form-control" name="materia-tematica">
                 <option value="UNKNOWN">Seleccione la materia</option>
                 <option value="MATH">Matemáticas</option>
                 <option value="PHYSICS">Física</option>
@@ -136,16 +136,16 @@
     <!-- Contenedor inferior -->
     <div class="bottom-container">
         <label class="file-label" for="fileInput">Files</label>
-        <input class="file-button" type="file" id="fileInput" accept=".pdf, .doc, .docx, .txt">
+        <input class="file-button" name="file" type="file" id="fileInput" accept=".pdf, .doc, .docx, .txt">
         <!-- Botones de guardar y cancelar -->
 
         <div class="button-container">
 
-            <button class="save-button">Guardar</button>
-            <button class="cancel-button">Cancelar</button>
+            <button type="submit" class="save-button">Guardar</button ty>
+            <button type="button" class="cancel-button">Cancelar</button>
         </div>
     </div>
-</div>
+<form/>
 
 <!-- Agrega los scripts de Bootstrap JavaScript al final del cuerpo del documento -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
