--- a/templates/recommendation/form_preferences.html
+++ b/templates/recommendation/form_preferences.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-                <button type="submit" class="btn btn-primary mt-2">Enviar</button>
+                <button type="submit" class="btn btn-primary mt-2 bg-dark">Enviar</button>
             </form>
         </div>
 
