--- a/templates/recommendation/recommended.html
+++ b/templates/recommendation/recommended.html
@@ -4,15 +4,15 @@
 
     <div class="container mt-4">
         <h2>RECOMENDACIONES</h2>
-        <h5>Aquí tienes algunas recomendaciones basadas en tus gustos:</h5>
+        <p>Aquí tienes algunas recomendaciones basadas en tus gustos:</p>
     <!-- Recommendations for category-->
     {% for recommendation in recommendations %}
     <div class="row mt-3 mb-3">
-        <h4 class="text-primary">{{ recommendation.category }}:</h4>
+        <h4>{{ recommendation.category }}:</h4>
         <!-- Books recommended for category-->
         {% for book in recommendation.books %}
         <div class="col-md-3">
-            <a style="text-decoration: none; color: black" href="book/{{ book.document_id }}">
+            <a style="text-decoration: none; color: black" href="./annotations/book/{{ book.document_id }}">  <!-- Change url to open book content-->
                 <div class="card">
                 <div class="card-body">
                     <h5 class="card-title text-center">{{ book.title }}</h5>
