--- a/social/templates/profile.html
+++ b/social/templates/profile.html
@@ -50,12 +50,12 @@
                 <div class="media align-items-end profile-head">
                     <div class="profile mr-3">
                         <img
-                                src="https://api.dicebear.com/7.x/open-peeps/svg?seed={{ user_profile.username }} {{ user_profile.first_name }} {{ user_profile.last_name }}"
+                                src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
                                 alt="..." width="130"
                                 class="rounded mb-2 img-thumbnail">
                     </div>
                     <div class="media-body mb-5 text-white">
-                        <h4 class="mt-0 mb-0 pb-4">{{ user_profile.first_name }} {{ user_profile.last_name }}</h4>
+                        <h4 class="mt-0 mb-0 pb-4">Nombre del usuario</h4>
                     </div>
                 </div>
             </div>
@@ -63,27 +63,15 @@
                     class="bg-light p-4 d-flex justify-content-end text-center">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item">
-                        {% if not is_own_profile %}
-                            {% if not already_following %}
-                                <a href="{% url 'follow_reader' user_id=user_profile.id %}">
-                                    <button
-                                            class="align-bottom btn btn-outline-dark btn-sm btn-block">Seguir
-                                    </button>
-                                </a>
-                            {% else %}
-                                <button href="#" class="align-bottom btn btn-outline-dark btn-sm btn-block" disabled>
-                                    Siguiendo
-                                </button>
-                            {% endif %}
-                        {% endif %}
+                        <h5 href="#" class="align-bottom btn btn-outline-dark btn-sm btn-block">Seguir</h5>
                     </li>
                     <li class="list-inline-item">
-                        <h5 class="font-weight-bold mb-0 d-block">{{ user_profile.followers_count }}</h5><small
+                        <h5 class="font-weight-bold mb-0 d-block">745</h5><small
                             class="text-muted"> <i
                             class="fas fa-user mr-1"></i>Seguidores</small>
                     </li>
                     <li class="list-inline-item">
-                        <h5 class="font-weight-bold mb-0 d-block">{{ user_profile.following_users_count }}</h5><small
+                        <h5 class="font-weight-bold mb-0 d-block">340</h5><small
                             class="text-muted"> <i
                             class="fas fa-user mr-1"></i>Seguidos</small>
                     </li>
@@ -106,21 +94,40 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 mb-2 pr-lg-1">
+                        <div class="image-container">
+                            <img
+                                    src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+                                    alt class="img-fluid rounded shadow-sm">
+                            <div class="centered-text">Nombre de la
+                                coleccion
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-2 pr-lg-1">
+                        <div class="image-container">
+                            <img
+                                    src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+                                    alt class="img-fluid rounded shadow-sm">
+                            <div class="centered-text">Nombre de la
+                                coleccion
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-2 pr-lg-1">
+                        <div class="image-container">
+                            <img
+                                    src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+                                    alt class="img-fluid rounded shadow-sm">
+                            <div class="centered-text">Nombre de la
+                                coleccion
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
 </html>
