--- a/templates/visualization/page_notes.html
+++ b/templates/visualization/page_notes.html
@@ -1,4 +1,4 @@
-{% extends 'visualization/page_notes.html' %}
+{% extends 'visualization/.html' %}
 {% block my_notes %}
 	<div class="row">
         {% for note in page_note %}
