fix(recommendations): Add correct format of recommended list on recommendations/model.py

--- a/templates/recommendation/form_preferences.html
+++ b/templates/recommendation/form_preferences.html
@@ -11,25 +11,25 @@
                 <div class="row mt-2 mb-2">
                     <div class="col-6">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="matematica" value="matematica">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="matematica" value="MATH">
                             <label class="form-check-label" for="matematica">
                                 Matemática
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="fisica" value="fisica">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="fisica" value="PHYSICS">
                             <label class="form-check-label" for="fisica">
                                 Física
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="calculo" value="calculo">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="calculo" value="CALCULUS">
                             <label class="form-check-label" for="calculo">
                                 Cálculo
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="programacion" value="programacion">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="programacion" value="PROGRAMMING">
                             <label class="form-check-label" for="programacion">
                                 Programación
                             </label>
@@ -37,25 +37,25 @@
                     </div>
                     <div class="col-6">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="literatura" value="literatura">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="literatura" value="LITERATURE">
                             <label class="form-check-label" for="literatura">
                                 Literatura
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="geometria" value="geometria">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="geometria" value="GEOMETRY">
                             <label class="form-check-label" for="geometria">
                                 Geometría
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="economia" value="economia">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="economia" value="ECONONOMY">
                             <label class="form-check-label" for="economia">
                                 Economía
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="quimica" value="quimica">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="quimica" value="CHEMISTRY">
                             <label class="form-check-label" for="quimica">
                                 Química
                             </label>
