--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -106,9 +106,14 @@
                         {% for note in notes %}
                             <div class="card-header d-flex justify-content-between align-items-center px-2 py-0 ">
                                 <div>{{ note.date }}</div>
-                                <button type="button" class="btn btn-sm py-0">
-                                    <i class="favorite fa-regular fa-heart" style="color: #000000;"></i>
-                                </button>
+                                <a href="/annotations/book/{{ document.uid }}/?page={{ page }}&action=favorite_{{ note.id }}"
+                                   class="favorite-link">
+                                    {% if note.is_favorite %}
+                                        <i class="favorite fa-solid fa-heart" style="color: red;"></i>
+                                    {% else %}
+                                        <i class="favorite fa-regular fa-heart" style="color: black;"></i>
+                                    {% endif %}
+                                </a>
                             </div>
                             <div class="card-body text-dark p-2">
                                 <p class="card-text">{{ note.content }}</p>
