feat(add new template "visualizarInformacion")

--- a/templates/social/subirArticulo.html
+++ b/templates/social/subirArticulo.html
@@ -112,6 +112,8 @@
         <div class="input-container">
             <input class="input-field form-control" type="text" placeholder="Título" name="title">
 
+            <input class="input-field form-control" type="text" placeholder="Autor" name="author">
+
             <!-- Campo de selección de materia/temática -->
             <select class="input-field form-control" name="materia-tematica">
                 <option value="UNKNOWN">Seleccione la materia</option>
