--- a/templates/social/visualizarInformacion.html
+++ b/templates/social/visualizarInformacion.html
@@ -44,6 +44,8 @@
 
         <!-- Campos de información del libro -->
         <h1 id="bookTitle">Título del Libro</h1>
+        <h1 id="author">Autor</h1>
+        <p><strong>Categoria:</strong> <span id="category">Categoria</span></p>
         <p><strong>Materia/Temática:</strong> <span id="bookSubject">Materia</span></p>
         <p><strong>Tipo:</strong> <span id="bookType">Tipo</span></p>
     </div>
