--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -46,14 +46,14 @@
 
                 <div class="d-flex justify-content-center align-items-center   bg-primary">
                     <!--Numero de pagina--><!-- Botones para cambiar de página -->
-                    <a class="btn btn-primary mx-1 py-0"
+                    <a id="btnPrevious" class="btn btn-primary mx-1 py-0"
                        href="/annotations/book/{{ document.uid }}/?page={{ page|add:"-1" }}">
                         <i class="fa-solid fa-arrow-right fa-rotate-180" style="color: #ffffff;"></i>
                     </a>
                     <span class="px-1 mx-1 text-light fw-bold" id="currentPage">-</span>
                     <span class="fw-bold px-1 text-light"> / </span>
                     <span class="px-1 mx-1 text-light fw-bold" id="totalPages">-</span>
-                    <a class="btn btn-primary mx-1 py-0 text-light"
+                    <a id="btnNext" class="btn btn-primary mx-1 py-0 text-light"
                        href="/annotations/book/{{ document.uid }}/?page={{ page|add:"+1" }}">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </a>
@@ -106,14 +106,22 @@
                         {% for note in notes %}
                             <div class="card-header d-flex justify-content-between align-items-center px-2 py-0 ">
                                 <div>{{ note.date }}</div>
-                                <a href="/annotations/book/{{ document.uid }}/?page={{ page }}&action=favorite_{{ note.id }}"
-                                   class="favorite-link">
-                                    {% if note.is_favorite %}
-                                        <i class="favorite fa-solid fa-heart" style="color: red;"></i>
-                                    {% else %}
-                                        <i class="favorite fa-regular fa-heart" style="color: black;"></i>
-                                    {% endif %}
-                                </a>
+                                <div>
+                                    <a href="/annotations/book/{{ document.uid }}/?page={{ page }}&action=favorite_{{ note.id }}"
+                                       class="favorite-link">
+                                        {% if note.is_favorite %}
+                                            <i class="favorite fa-solid fa-heart" style="color: red;"></i>
+                                        {% else %}
+                                            <i class="favorite fa-regular fa-heart" style="color: black;"></i>
+                                        {% endif %}
+                                    </a>
+                                    <a href="/annotations/book/{{ document.uid }}/?page={{ page }}&action=delete_{{ note.id }}"
+                                        class="text-danger"
+                                        style="margin-left: 1rem"
+                                    >
+                                        <i class="fas fa-trash-alt"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="card-body text-dark p-2">
                                 <p class="card-text">{{ note.content }}</p>
